--- a/.env.example
+++ b/.env.example
@@ -4,5 +4,5 @@ SECRET_KEY=change-this
 DATABASE_NAME=authentification
 DATABASE_USER=authentification_team
 DATABASE_PASSWORD=authentification_pwd
-DATABASE_HOST= 
-DATABASE_PORT=
+DATABASE_HOST=localhost
+DATABASE_PORT=5432
